syntax = "proto3";

package soccerbuddy.club.v1;

import "google/protobuf/timestamp.proto";

option go_package = "soccerbuddy/club/v1;clubv1";

service ClubService {
  rpc CreateClub(CreateClubRequest) returns (CreateClubResponse) {}

  rpc GetClubBySlug(GetClubBySlugRequest) returns (GetClubBySlugResponse) {}

  rpc ListClubs(ListClubsRequest) returns (ListClubsResponse) {}

  rpc PromoteUserToAdmin(PromoteUserToAdminRequest) returns (PromoteUserToAdminResponse) {}
}

message CreateClubRequest {
  string name = 1;
}

message CreateClubResponse {
  string id = 1;
  string name = 2;
  string slug = 3;
}

message GetClubBySlugRequest {
  string slug = 1;
}

message GetClubBySlugResponse {
  string id = 1;
  string name = 2;
  string slug = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message ListClubsRequest {}

message ListClubsResponse {
  repeated Club clubs = 1;

  message Club {
    string id = 1;
    string name = 2;
    string slug = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
  }
}

message PromoteUserToAdminRequest {
  string club_id = 1;
  string account_id = 2;
}

message PromoteUserToAdminResponse {}
