syntax = "proto3";

package soccerbuddy.shared;

enum AccountLink {
  LINKED_AS_UNSPECIFIED = 0;
  LINKED_AS_SELF = 1;
  LINKED_AS_PARENT = 2;
}
